test/expected/cli/regex_error_caret.out
shit: 1:11: error: Unable to evaluate the [[ ]] because the regular expression '(' is invalid.
     1 |  [[ abc =~ ( ]]
       |            ^~ here.
